# fsort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fsort/: __init__.py  core.py
tests/: test_fsort.py
